--- a/pom.xml
+++ b/pom.xml
@@ -25,7 +25,13 @@
             <scope>test</scope>
 
         </dependency>
-<!--        <dependency>-->
+        <dependency>
+            <groupId>junit</groupId>
+            <artifactId>junit</artifactId>
+            <version>RELEASE</version>
+            <scope>test</scope>
+        </dependency>
+        <!--        <dependency>-->
 <!--            <groupId>org.apache.maven.plugins</groupId>-->
 <!--            <artifactId>maven-surefire-plugin</artifactId>-->
 <!--            <version>2.12.4</version>-->
